--- a/css/styles.css
+++ b/css/styles.css
@@ -11249,7 +11249,8 @@ body {
 .header-logo{
   display: block;
   width: 120px;
-  height: 50px;
-  /* display: block;
-  margin-left: 40px; */
+  height: 120px;
+  display: block;
+  margin-left: 40px;
+  margin-top: 10px;
 }
